--- a/desktop-application/forms/signindialog.ui
+++ b/desktop-application/forms/signindialog.ui
@@ -24,10 +24,18 @@
       </widget>
      </item>
      <item row="1" column="1">
-      <widget class="QLineEdit" name="edit_password"/>
+      <widget class="QLineEdit" name="edit_password">
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
      </item>
      <item row="0" column="1">
-      <widget class="QLineEdit" name="edit_email"/>
+      <widget class="QLineEdit" name="edit_email">
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
      </item>
      <item row="1" column="0">
       <widget class="QLabel" name="label_2">
