--- a/desktop-application/forms/sensorinfodialog.ui
+++ b/desktop-application/forms/sensorinfodialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>689</width>
-    <height>652</height>
+    <width>704</width>
+    <height>695</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,42 +16,21 @@
   <layout class="QGridLayout" name="gridLayout_2">
    <item row="1" column="0">
     <layout class="QGridLayout" name="gridLayout">
-     <item row="0" column="0">
-      <widget class="QLabel" name="label_2">
-       <property name="text">
-        <string>Sensor Name:</string>
+     <item row="8" column="2">
+      <widget class="Line" name="line_6">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
        </property>
       </widget>
      </item>
-     <item row="1" column="3" colspan="2">
-      <widget class="QLineEdit" name="edit_current_value">
-       <property name="enabled">
-        <bool>false</bool>
-       </property>
-      </widget>
-     </item>
-     <item row="13" column="0" colspan="4">
-      <widget class="Line" name="line_4">
+     <item row="5" column="0" colspan="4">
+      <widget class="Line" name="line_5">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
       </widget>
      </item>
-     <item row="6" column="0">
-      <widget class="QLabel" name="label_4">
-       <property name="text">
-        <string>History:</string>
-       </property>
-      </widget>
-     </item>
-     <item row="4" column="0">
-      <widget class="QLabel" name="label_9">
-       <property name="text">
-        <string>Routine:</string>
-       </property>
-      </widget>
-     </item>
-     <item row="6" column="3">
+     <item row="8" column="3">
       <layout class="QGridLayout" name="gridLayout_4">
        <item row="10" column="0" colspan="3">
         <widget class="QPushButton" name="pushButton_2">
@@ -208,31 +187,101 @@
        </item>
       </layout>
      </item>
-     <item row="5" column="0" colspan="4">
-      <widget class="Line" name="line_5">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
+     <item row="1" column="0">
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string>Current Value:</string>
        </property>
       </widget>
      </item>
-     <item row="17" column="0" colspan="5">
+     <item row="6" column="1">
+      <widget class="Line" name="line_8">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="3" colspan="2">
+      <widget class="QLineEdit" name="edit_sensor_name">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
+      </widget>
+     </item>
+     <item row="19" column="0" colspan="5">
       <widget class="Line" name="line">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
       </widget>
      </item>
+     <item row="8" column="0">
+      <widget class="QLabel" name="label_4">
+       <property name="text">
+        <string>History:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="18" column="0" colspan="4">
+      <widget class="QPushButton" name="pushButton_3">
+       <property name="text">
+        <string>Delete</string>
+       </property>
+      </widget>
+     </item>
+     <item row="6" column="0">
+      <widget class="QLabel" name="label_10">
+       <property name="text">
+        <string>Added Routines:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="0">
+      <widget class="QLabel" name="label_2">
+       <property name="text">
+        <string>Sensor Name:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="0" colspan="5">
+      <widget class="Line" name="line_2">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="1">
+      <widget class="Line" name="line_7">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+      </widget>
+     </item>
+     <item row="15" column="0" colspan="4">
+      <widget class="Line" name="line_4">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="3" colspan="2">
+      <widget class="QLineEdit" name="edit_current_value">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="0">
+      <widget class="QLabel" name="label_9">
+       <property name="text">
+        <string>Routine:</string>
+       </property>
+      </widget>
+     </item>
      <item row="4" column="3">
       <layout class="QGridLayout" name="gridLayout_3">
-       <item row="3" column="0">
-        <widget class="QLabel" name="label_14">
-         <property name="text">
-          <string>Frequency:</string>
-         </property>
-        </widget>
-       </item>
        <item row="3" column="1">
-        <widget class="QComboBox" name="comboBox">
+        <widget class="QComboBox" name="cbFrequency">
          <item>
           <property name="text">
            <string>Doesn't repeat</string>
@@ -255,23 +304,16 @@
          </item>
         </widget>
        </item>
+       <item row="1" column="1">
+        <widget class="QTimeEdit" name="timeEdit"/>
+       </item>
        <item row="2" column="1">
         <widget class="QCalendarWidget" name="calendarWidget"/>
        </item>
-       <item row="2" column="0">
-        <widget class="QLabel" name="label_13">
+       <item row="3" column="0">
+        <widget class="QLabel" name="label_14">
          <property name="text">
-          <string>Date:</string>
-         </property>
-        </widget>
-       </item>
-       <item row="6" column="0" colspan="2">
-        <widget class="QPushButton" name="pushButton">
-         <property name="enabled">
-          <bool>false</bool>
-         </property>
-         <property name="text">
-          <string>Set New Value</string>
+          <string>Frequency:</string>
          </property>
         </widget>
        </item>
@@ -282,66 +324,54 @@
          </property>
         </widget>
        </item>
-       <item row="1" column="1">
-        <widget class="QTimeEdit" name="timeEdit"/>
+       <item row="2" column="0">
+        <widget class="QLabel" name="label_13">
+         <property name="text">
+          <string>Date:</string>
+         </property>
+        </widget>
        </item>
-       <item row="5" column="0">
+       <item row="7" column="0" colspan="2">
+        <widget class="QPushButton" name="pushButton">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
+         <property name="text">
+          <string>Set New Value</string>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="1">
+        <widget class="QLineEdit" name="edit_new_value"/>
+       </item>
+       <item row="4" column="0">
         <widget class="QLabel" name="label_3">
          <property name="text">
           <string>New Value:</string>
          </property>
         </widget>
        </item>
-       <item row="5" column="1">
-        <widget class="QLineEdit" name="edit_new_value">
-         <property name="enabled">
-          <bool>false</bool>
-         </property>
-        </widget>
-       </item>
       </layout>
      </item>
-     <item row="0" column="3" colspan="2">
-      <widget class="QLineEdit" name="edit_sensor_name">
-       <property name="enabled">
-        <bool>false</bool>
-       </property>
-      </widget>
-     </item>
-     <item row="16" column="0" colspan="4">
-      <widget class="QPushButton" name="pushButton_3">
-       <property name="text">
-        <string>Delete</string>
-       </property>
-      </widget>
-     </item>
-     <item row="6" column="2">
-      <widget class="Line" name="line_6">
-       <property name="orientation">
-        <enum>Qt::Vertical</enum>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="0" colspan="5">
-      <widget class="Line" name="line_2">
+     <item row="7" column="0" colspan="4">
+      <widget class="Line" name="line_9">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
       </widget>
      </item>
-     <item row="1" column="0">
-      <widget class="QLabel" name="label">
-       <property name="text">
-        <string>Current Value:</string>
-       </property>
-      </widget>
-     </item>
-     <item row="4" column="1">
-      <widget class="Line" name="line_7">
-       <property name="orientation">
-        <enum>Qt::Vertical</enum>
-       </property>
-      </widget>
+     <item row="6" column="3">
+      <layout class="QHBoxLayout" name="horizontalLayout">
+       <item>
+        <widget class="QDateTimeEdit" name="dateTimeRoutine"/>
+       </item>
+       <item>
+        <widget class="QLineEdit" name="routineType"/>
+       </item>
+       <item>
+        <widget class="QComboBox" name="cbRoutines_2"/>
+       </item>
+      </layout>
      </item>
     </layout>
    </item>
