--- a/desktop-application/forms/sensorinfodialog.ui
+++ b/desktop-application/forms/sensorinfodialog.ui
@@ -371,6 +371,13 @@
        <item>
         <widget class="QComboBox" name="cbRoutines_2"/>
        </item>
+       <item>
+        <widget class="QToolButton" name="toolButton">
+         <property name="text">
+          <string>...</string>
+         </property>
+        </widget>
+       </item>
       </layout>
      </item>
     </layout>
