--- a/desktop-application/forms/sensorinfodialog.ui
+++ b/desktop-application/forms/sensorinfodialog.ui
@@ -363,10 +363,25 @@
      <item row="6" column="3">
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
-        <widget class="QDateTimeEdit" name="dateTimeRoutine"/>
+        <widget class="QDateTimeEdit" name="dateTimeRoutine">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
+        </widget>
        </item>
        <item>
-        <widget class="QLineEdit" name="routineType"/>
+        <widget class="QLineEdit" name="routineType">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="label_value">
+         <property name="text">
+          <string>Value:</string>
+         </property>
+        </widget>
        </item>
        <item>
         <widget class="QComboBox" name="cbRoutines_2"/>
